--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -1,45 +1,10 @@
 .ProductListComponent {
-  width: 100vw;
-  height: 70vh;
-  padding: 32px;
-  box-sizing: border-box;
-}
-
-table {
-  width: 100%;
-  table-layout: fixed;
-  border-collapse: collapse;
-}
-
-.tbl-header {
-  background-color: #dddddd;
-}
-
-.tbl-content {
   background-color: #ffffff;
-  height: 50vh;
-  overflow-x: auto;
-  margin-top: 0px;
+  height: 100%;
+}
+
+.product-list-bottom {
+  height: 92.6%;
   position: relative;
-  border-top: none;
-}
-
-.tbl-content tr:hover {
-  background-color: #f1f1f1;
-}
-
-th {
-  padding: 20px 15px;
-}
-
-button {
-  border: none;
-  padding: 10px;
-  background-color: #ffffff00;
-  cursor: pointer;
-  text-transform: capitalize;
-}
-
-button:hover {
-  transform: scale(1.1);
+  overflow: auto;
 }
