feat: test for some components

--- a/src/App.css
+++ b/src/App.css
@@ -62,4 +62,6 @@ table {
   align-items: center;
   justify-content: center;
   overflow: auto;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
 }
