--- a/src/components/purchaseDetails/purchaseDetails.css
+++ b/src/components/purchaseDetails/purchaseDetails.css
@@ -1,6 +1,8 @@
 .PurchaseDetailsComponent {
   background-color: #ffffff;
   height: 100%;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 }
 
 .purchase-list-content {
